# covcal-lean

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: amc.yaml  dev.yaml  goedel32b.yaml  goedel8b.yaml  main.yaml
data/: amc_aime_combined.jsonl
lean/: CovCal.lean  _mathlib_bootstrap.lean  lake-manifest.json  lakefile.lean
lean/CovCal/: Runner.lean  Templates.lean
scripts/: render_figure_selective_risk.py  render_tables.py  run_minimal.sh  setup_lean.sh
scripts/analysis/: _common.py  bootstrap_seeds.py  coarse_grid.py  mcnemar.py  paper_numbers.py  per_level.py  proof_faithfulness.py  regime_comparison.py  reliability.py
src/covcal/: __init__.py  calibration.py  classes.py  cli.py  diagnostics.py  metrics.py  normalization.py  pipeline.py  run_metadata.py  selectors.py  types.py
src/covcal/data/: __init__.py  amc_aime.py  filters.py  math500.py  splits.py
src/covcal/generation/: __init__.py  backend.py  cache.py  extract.py  llamacpp.py  prompts.py  vllm_backend.py
src/covcal/lean/: __init__.py  autoformalize.py  backend.py  mock.py  subprocess_backend.py  templates.py
tests/: conftest.py
tests/integration/: test_pipeline_mock.py  test_render_tables.py
tests/unit/: test_app_c_schema.py  test_autoformalize.py  test_autoformalize_batched.py  test_calibration.py  test_classes.py  test_data.py  test_diagnostics.py  test_generation.py  test_lean_mock.py  test_metrics.py  test_normalization.py  test_pipeline_resume.py  test_run_metadata.py  test_selectors.py
