[project]
name = "covcal"
version = "0.1.0"
description = "Coverage-calibrated formal verification for natural-language math answer selection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CovCal authors" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "datasets>=2.18",
    "tqdm>=4.66",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.24",
    # Required so httpx (used by huggingface_hub) can route through a SOCKS proxy
    # when $ALL_PROXY / $HTTPS_PROXY points at a socks5h:// endpoint. Many ML hosts
    # only expose the outside world via SOCKS; installing this eagerly avoids a
    # confusing ImportError on the first hf_hub_download.
    "socksio>=1.0",
]
# GPU inference via vLLM. Pulls torch + CUDA wheels; install on a CUDA host with
# `uv sync --extra gpu`. Use `gpu` *instead of* `llm` on GPU boxes (they don't conflict,
# but llama.cpp's CPU wheel is a wasted download there).
#
# Why the upper bounds:
#   * vllm 0.11+ ships PyPI wheels that link libcudart.so.13 (CUDA 13 runtime), which
#     needs driver >= 580. The lab boxes we run on (rtx-a6000, H100 dev box) ship
#     driver 570.211.01 → CUDA 12.8 max. Cap vllm at <0.11 so we land on a CUDA-12-era
#     wheel set (vllm 0.10.x). When the lab drivers move to 580+, lift this cap.
#   * vllm 0.10 imports transformers symbols that were removed in transformers 5.x
#     (Qwen2Tokenizer.all_special_tokens_extended). Pin transformers <5.
#   * transformers 4.x imports huggingface_hub symbols that were removed in hub 1.x.
#     Pin huggingface-hub <1.
#   * torch is sourced from the pytorch-cu128 index below (CUDA 12.8 wheels), not PyPI.
#     The version band brackets what vllm 0.10.x actually accepts (torch 2.7–2.11).
gpu = [
    "vllm>=0.10.0,<0.11",
    "torch>=2.7,<2.12",
    "transformers>=4.45,<5",
    "huggingface-hub>=0.34,<1",
    "socksio>=1.0",
]
viz = [
    "matplotlib>=3.8",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "hypothesis>=6.100",
    # Installing hatchling + editables here too lets `uv sync` build covcal *without*
    # spawning a fresh build-isolation env (see `[tool.uv].no-build-isolation-package`
    # below). That matters on locked-down hosts where PyPI's simple/ index times out
    # under SOCKS. `editables` is required by hatchling for PEP 660 editable installs.
    "hatchling>=1.25",
    "editables>=0.5",
]

[project.scripts]
covcal = "covcal.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/covcal"]

# Build covcal without a fresh PEP 517 build-isolation env. The venv already has
# `hatchling` (from the `dev` extras), so uv can build in-place. This avoids re-fetching
# hatchling from PyPI on every `uv sync` — which is the failure mode on hosts that only
# reach PyPI through a slow / flaky SOCKS proxy.
[tool.uv]
no-build-isolation-package = ["covcal"]

# Route torch (and the torch* extras) through PyTorch's CUDA 12.8 index. The default
# PyPI torch wheels link libcudart.so.13 since torch 2.9; on driver 570 hosts that
# fails at runtime. The cu128 index publishes CUDA 12.8 wheels that work with driver
# >= 525. The `default = false` keeps PyPI as the primary index for everything else.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501: long lines are fine in docstrings.
# B027: empty `close`/`__exit__` defaults on ABCs are intentional (subclasses override).
# RUF001/RUF002/RUF003: ambiguous unicode is intentional (we embed Lean notation ℤ ℚ ε δ).
# UP042: keep `str, Enum` for JSON-friendly behaviour pre-3.11 portability.
ignore = ["E501", "B027", "RUF001", "RUF002", "RUF003", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"src/covcal/cli.py" = ["E702"]  # one-liners in rich.Table column setup are readable

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "lean: requires a working Lean/Lake installation",
    "llm: requires an LLM backend (llama.cpp + model file)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/covcal"]
